WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193992
<
rdar://problem/29471922
> Safari should switch from the legacy denap SPI to handling vouchers
https://bugs.webkit.org/show_bug.cgi?id=193992
Summary
<rdar://problem/29471922> Safari should switch from the legacy denap SPI to h...
Benjamin Poulain
Reported
2019-01-29 15:33:22 PST
<
rdar://problem/29471922
> Safari should switch from the legacy denap SPI to handling vouchers
Attachments
Patch
(3.87 KB, patch)
2019-01-29 15:36 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.84 KB, patch)
2019-01-30 16:54 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2019-01-29 15:36:00 PST
Created
attachment 360513
[details]
Patch
Benjamin Poulain
Comment 2
2019-01-29 15:36:02 PST
<
rdar://problem/29471922
>
Geoffrey Garen
Comment 3
2019-01-30 14:16:17 PST
Comment on
attachment 360513
[details]
Patch r=me
Benjamin Poulain
Comment 4
2019-01-30 14:32:54 PST
Thanks for the review Geoff.
WebKit Commit Bot
Comment 5
2019-01-30 15:40:11 PST
Comment on
attachment 360513
[details]
Patch Rejecting
attachment 360513
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 360513, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=360513&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=193992
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 360513 from
bug 193992
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=360513
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: b8f58fdc2bf84cbb63f157ac849484cd8b1dfe76 and refs/remotes/origin/master differ, using rebase: :040000 040000 6327cbb7ba571fd0bb483d70dc049e6d8ada6e4b c53753ff86e001b637539b9f8f1254059d22aef7 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: b8f58fdc2bf84cbb63f157ac849484cd8b1dfe76 and refs/remotes/origin/master differ, using rebase: :040000 040000 6327cbb7ba571fd0bb483d70dc049e6d8ada6e4b c53753ff86e001b637539b9f8f1254059d22aef7 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/10958097
Benjamin Poulain
Comment 6
2019-01-30 16:54:20 PST
Created
attachment 360646
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2019-01-30 17:50:52 PST
Comment on
attachment 360646
[details]
Patch for landing Clearing flags on attachment: 360646 Committed
r240745
: <
https://trac.webkit.org/changeset/240745
>
WebKit Commit Bot
Comment 8
2019-01-30 17:50:53 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 9
2019-02-01 08:23:05 PST
Just checking: Is this compatible with all the oldest versions of macOS that we currently support with TOT WebKit?
Benjamin Poulain
Comment 10
2019-02-01 10:04:27 PST
(In reply to Darin Adler from
comment #9
)
> Just checking: Is this compatible with all the oldest versions of macOS that > we currently support with TOT WebKit?
The vouchers are at least supported in >= Mojave. Sorry I forgot the policy. How far back do we have to support?
Geoffrey Garen
Comment 11
2019-02-01 13:35:13 PST
It looks like MACH_RCV_VOUCHER and mach_voucher_deallocate were introduced in macOS 10.10 Yosemite (four macOS releases ago) -- at the same time as proc_denap_assertion_begin_with_msg() / proc_denap_assertion_complete(). So, we might need to do some testing, but I think we're OK here.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug