<rdar://problem/29471922> Safari should switch from the legacy denap SPI to handling vouchers https://bugs.webkit.org/show_bug.cgi?id=193992

Patch by Daniel Steffen <dsteffen@apple.com> on 2019-01-30
Reviewed by Geoffrey Garen.

The denap SPI is deprecated.
The new way of staying out of AppNap is through a voucher.

* Platform/IPC/mac/ConnectionMac.mm:
(IPC::readFromMachPort):
* Platform/IPC/mac/ImportanceAssertion.h:
(IPC::ImportanceAssertion::ImportanceAssertion):
(IPC::ImportanceAssertion::~ImportanceAssertion):

Canonical link: https://commits.webkit.org/208533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240745 268f45cc-cd09-0410-ab3c-d52691b4dbfc